--- a/src/styles/feedback-new.module.scss
+++ b/src/styles/feedback-new.module.scss
@@ -134,7 +134,7 @@ $vw-viewport: 1440;
   border-radius: get-vw(5px);
   border: #d73737 get-vw(2px) solid;
 }
-.input3 span {
+.input3 p {
   color: #d73737;
   font-size: get-vw(15px);
 }
